get reservations support
